--- a/IntroductionWindowsApp/IntroductionWindowsApp/IntroductionWindowsApp.csproj
+++ b/IntroductionWindowsApp/IntroductionWindowsApp/IntroductionWindowsApp.csproj
@@ -80,6 +80,12 @@
     <Compile Include="NasirUi.Designer.cs">
       <DependentUpon>NasirUi.cs</DependentUpon>
     </Compile>
+    <Compile Include="Obaedullah.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Obaedullah.Designer.cs">
+      <DependentUpon>Obaedullah.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="shofikAhmed.cs">
