--- a/IntroductionWindowsApp/IntroductionWindowsApp/IntroductionWindowsApp.csproj
+++ b/IntroductionWindowsApp/IntroductionWindowsApp/IntroductionWindowsApp.csproj
@@ -50,6 +50,12 @@
     <Compile Include="Akash.Designer.cs">
       <DependentUpon>Akash.cs</DependentUpon>
     </Compile>
+    <Compile Include="ArifUddinForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ArifUddinForm.Designer.cs">
+      <DependentUpon>ArifUddinForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="EvrahimUi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +121,9 @@
     <EmbeddedResource Include="Akash.resx">
       <DependentUpon>Akash.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ArifUddinForm.resx">
+      <DependentUpon>ArifUddinForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="EvrahimUi.resx">
       <DependentUpon>EvrahimUi.cs</DependentUpon>
     </EmbeddedResource>
@@ -160,6 +169,7 @@
     <EmbeddedResource Include="Tanvir.resx">
       <DependentUpon>Tanvir.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -169,9 +179,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
