--- a/IntroductionWindowsApp/IntroductionWindowsApp/IntroductionWindowsApp.csproj
+++ b/IntroductionWindowsApp/IntroductionWindowsApp/IntroductionWindowsApp.csproj
@@ -96,6 +96,12 @@
     <Compile Include="Obaedullah.Designer.cs">
       <DependentUpon>Obaedullah.cs</DependentUpon>
     </Compile>
+    <Compile Include="PijushUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PijushUI.Designer.cs">
+      <DependentUpon>PijushUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="shofikAhmed.cs">
@@ -145,6 +151,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="NasirUi.resx">
       <DependentUpon>NasirUi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PijushUI.resx">
+      <DependentUpon>PijushUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
